--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/favicon/weather.png"
+      href="/src/assets/favicon/favicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather Ignite</title>
+    <title>BlogPost</title>
   </head>
   <body class="bg-gray-300">
     <div id="root"></div>
