--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/favicon/favicon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlogPost</title>
+    <title>bloG</title>
   </head>
   <body class="bg-gray-300">
     <div id="root"></div>
